<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/add_feature_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical"
            android:text="@string/name_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/added_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical"
            android:text="@string/link_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/added_link"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:gravity="center"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical"
            android:text="@string/location_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/added_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/location_hint"
            android:inputType="number"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical"
            android:text="@string/time_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/added_time_start"
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/time_hint_start"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/added_time_end"
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/time_hint_end"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

    </LinearLayout>


</LinearLayout>