<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4cfcd">
    tools:context="com.zdowning.decisionmaker.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutProduct"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="@string/product_name" />

        <EditText
            android:id="@+id/eCommerceInfo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:hint="@string/ecommerce" />

        <LinearLayout
            android:id="@+id/linearLayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/appearanceTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/time_of_appearance"
                android:inputType="time" />

            <EditText
                android:id="@+id/quadrantNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/quadrant_number"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/add_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="+"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/remove_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="-"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/uploadVideoButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:text="@string/upload_video"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>